initial poc for panama testing.  some dirty path references for library loading
Signed-off-by: garyschulte <garyschulte@gmail.com>